tests/snapshots/sizes__landing_databases_60x16.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────┐
│> (empty — press e to focus)                              │
└──────────────────────────────────────────────────────────┘
┌ start ───────────────────────────────────────────────────┐
│ connected to shop on localhost:5432 · pg 16.2 · RO       │
│                                                          │
│   e   write a query                                      │
│   S   schema browser (4 tables)                          │
│   Q   saved queries (3)                                  │
│   T   slow queries                                       │
│   W   schema wizard                                      │
│   L   sessions & locks                                   │
│                                                          │
└──────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   q quit · ? help · e editor · F1 +9 more
