tests/snapshots/sizes__log_pick_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  FROM users                                                                                      │
│  WHERE plan = 'pro'                                                                              │
│  ORDER BY created_at DESC;                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ result · 6 row(s) ───────────────────────────────────────────────────────────────────────────────┐
│┌ log picks · 1/2 ───────────────────────────────────────────────────────────────────────────────┐│
││  2 queries · view: all queries (press `c` to toggle)                                           ││
││                                                                                                ││
││▶ [hibernate] select * from users where id = 42                                                 ││
││  [pglog]     select * from orders where user_id = 42                                           ││
│└────────────────────────────────────────────────────────────────────────────────────────────────┘│
│6   katherine@example.com  pro   2026-03-21 16:40:00+00                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   ↑↓ / j/k navigate · enter load · c toggle clusters · esc cancel · F1 help
