tests/snapshots/sizes__log_pick_60x16.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…             ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────┐
│  FROM users                                              │
│  WHERE plan = 'pro'                                      │
│  ORDER BY created_at DESC;                               │
└──────────────────────────────────────────────────────────┘
┌ result · 6 row(s) ───────────────────────────────────────┐
│┌ log picks · 1/2 ───────────────────────────────────────┐│
││  2 queries · view: all queries (press `c` to toggle)   ││
││                                                        ││
││▶ [hibernate] select * from users where id = 42         ││
││  [pglog]     select * from orders where user_id = 42   ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   ↑↓ / j/k navigate · F1 +4 more
