tests/snapshots/sizes__log_pick_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  FROM users                                                                  │
│  WHERE plan = 'pro'                                                          │
│  ORDER BY created_at DESC;                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result · 6 row(s) ───────────────────────────────────────────────────────────┐
│id  email                  plan  created_at                                   │
│┌ log picks · 1/2 ───────────────────────────────────────────────────────────┐│
││  2 queries · view: all queries (press `c` to toggle)                       ││
││                                                                            ││
││▶ [hibernate] select * from users where id = 42                             ││
││  [    pglog] select * from orders where user_id = 42                       ││
│└────────────────────────────────────────────────────────────────────────────┘│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   ↑↓ / j/k navigate · enter load · c toggle clusters · esc ca
